# intent-detection

./: .gitignore  BERT.ipynb  GPT-3.ipynb  GPT3_few_shot_prediction.json  GPT3_full_finetuned.json  GPT3_full_prediction.json  README.md  baseline.ipynb  data_stats.ipynb  fine_tune_data.jsonl  fine_tune_data_num.jsonl  fine_tune_data_num_prepared_train.jsonl  fine_tune_data_num_prepared_valid.jsonl  fine_tune_data_prepared_train.jsonl  fine_tune_data_prepared_valid.jsonl  full_original_train_gpt.jsonl  full_original_valid_gpt.jsonl  infer_models.ipynb  label_num_mapping.json  pyproject.toml  result.csv  train_few_shot_10.jsonl
dataset/: sub_test_set.json
utils/data_utils/: __init__.py  intent_example.py
