[tool.poetry]
name = "intent-detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
jupyter = "^1.0.0"
ipykernel = "^6.13.0"
cufflinks = "^0.17.3"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
